Bug Fix on Mobile

--- a/src/styles/components/ServicePage.css
+++ b/src/styles/components/ServicePage.css
@@ -22,7 +22,10 @@
   padding-top: 18px;
   position: relative;
   background-color: #091629;
-  min-width: 400px;
+  min-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 92%;
   height: 325px;
   margin-top: 50px;
   display: flex;
@@ -106,7 +109,7 @@
   .services__card__container {
     margin-left: auto;
     margin-right: auto;
-    width: 500px;
+    width: 85%;
     /* margin: 02px; */
   }
 }
